# presidential-oval-office

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: deliveries.py  drones.py  ports.py  simulation.py
backend/app/services/: airspace.py  fleet.py  port_scheduler.py  routing.py
backend/app/ws/: manager.py
backend/tests/: conftest.py  test_airspace.py  test_api.py  test_routing.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  UserApp.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DeliveryForm.tsx  DeliveryList.tsx  DroneMap.tsx  StatsBar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: HistoryPage.tsx  HomePage.tsx  NewDeliveryPage.tsx  TrackingPage.tsx
frontend/src/types/: index.ts
